	and "fitted" respectively).

    o	scan() (and hence read.table) was not finding matches for
	separator chars with the upper bit set.	 (PR#3035)

    o	lm.(w)fit failed if the fit had rank 0.

    o	lqs() did not report explicitly that it had failed if all
	samples gave singular fits.

    o	predict.lm(*, se=TRUE) {w/ weights, w/o newdata} now gives correct
	SE's.  (PR#3043)

    o	cor.test(x, y, method="spearman") now also works for 
	length(x) > 1290.

    o	Matrices were printed mis-aligned if right=TRUE and na.print
	was specified.  (PR#3058)

    o   R CMD check gives now a clearer message when latex produces
        errors on the package manual.  (PR#3070)

    o   isSeekable() was incorrectly returning FALSE on all file connections.

    o   tkpager() wasn't quite using its title and header arguments in
        the way prescribed by file.show()

		CHANGES IN R VERSION 1.7.0


USER-VISIBLE CHANGES

    o	solve(), chol(), eigen() and svd() now use LAPACK routines
	unless a new back-compatibility option is turned on.  The
	signs and normalization of eigen/singular vectors may change
	from earlier versions.

    o	The `methods', `modreg', `mva', `nls' and `ts' packages
	are now attached by default at startup (in addition to `ctest').
	The option "defaultPackages" has been added which contains the
	initial list of packages.  See ?Startup and ?options for details.
	Note that .First() is no longer used by R itself.

	class() now always (not just when `methods' is attached) gives
	a non-null class, and UseMethod() always dispatches on the
	class that class() returns.  This means that methods like
	foo.matrix and foo.integer will be used.  Functions oldClass()
	and oldClass<-() get and set the "class" attribute as R
	without `methods' used to.

    o	The default random number generators have been changed to
	`Mersenne-Twister' and `Inversion'.  A new RNGversion()
	function allows you to restore the generators of an earlier R
	version if reproducibility is required.
